# saas

./: Cargo.toml  Rocket.toml  db.db
migrations/2020-09-08-090442_create_users/: down.sql  up.sql
migrations/2020-09-08-124510_create_teams/: down.sql  up.sql
migrations/2020-09-08-125337_create_in_teams/: up.sql
src/: main.rs
src/db/: schema.rs
src/teams/: mod.rs  routes.rs  team.rs
src/users/: routes.rs  user.rs
