[package]
name = "saas"
version = "0.1.0"
authors = ["Nunes Nelson <nunes.nelson4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "^1.1.0", features = ["sqlite"] }
dotenv = "0.15.0"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_sqlite_pool"]